Take care of PR review